# salt-rewrite

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  pyproject.toml
.github/workflows/: main.yml
src/saltrewrite/: __main__.py  fixes.py  utils.py
src/saltrewrite/imports/: __init__.py  fix_saltext_utils_imports.py  fix_tornado_imports.py
src/saltrewrite/salt/: __init__.py  fix_docstrings.py  fix_dunder_utils.py  fix_warn_until.py  utils.py
src/saltrewrite/salt_extensions/: __init__.py  fix_saltext.py
src/saltrewrite/testsuite/: __init__.py  fix_asserts.py  fix_destructive_test_decorator.py  fix_expensive_test_decorator.py  fix_requires_network_decorator.py  fix_requires_salt_modules_decorator.py  fix_requires_salt_states_decorator.py  fix_skip_if_binaries_missing_decorator.py  fix_skip_if_not_root_decorator.py  fix_slow_test_decorator.py
tests/: conftest.py
tests/imports/: test_fix_saltext_utils_imports.py  test_fix_tornado_imports.py
tests/salt/: test_docstrings.py  test_dunder_utils.py  test_warn_until.py
tests/salt_extensions/: test_fix_saltextension.py
tests/testsuite/: test_fix_asserts.py
tests/testsuite/decorators/: test_destructive_test.py  test_expensivetest.py  test_requires_network.py  test_requires_salt_modules.py  test_requires_salt_states.py  test_skip_if_binaries_missing.py  test_skip_if_not_root.py  test_slow_test.py
tests/utils/: test_remove_import.py
