[tool.poetry]
name = "salt-rewrite"
version = "2.0.0"
description = "A set of Bowler code to rewrite parts of Salt"
authors = ["Pedro Algarvio <pedro@algarvio.me>"]
license = "Apache-2.0"
packages = [
  {include = "saltrewrite", from = "src" }
]

[tool.poetry.scripts]
"salt-rewrite" = "saltrewrite.__main__:rewrite"

[tool.poetry.dependencies]
python = ">=3.6.1"
bowler = ">= 0.9.0"
fissix = {version = "^19.2b1", allow-prereleases = true}
importlib_metadata = {version = "*", python="<3.8"}

[tool.poetry.dev-dependencies]
pytest = ">= 5.3.4"
pylint = "^2.4.4"
pre-commit = "^2.17.0"
coverage = "^5.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
